# cottage-hearth

./: manage.py  pyproject.toml
cottage_hearth/: asgi.py  settings.py  urls.py  wsgi.py
cottage_hearth/clients/: models.py
cottage_hearth/clients/migrations/: 0001_initial.py  0002_auto_20210514_1059.py
cottage_hearth/clients/templates/clients/: client_page.html
cottage_hearth/home/: models.py
cottage_hearth/home/migrations/: 0001_initial.py  0002_homepage_tagline.py  0003_alter_homepage_tagline.py
cottage_hearth/home/templates/home/: home_page.html
cottage_hearth/journal/: fields.py  models.py
cottage_hearth/journal/assets/journal/: journal.js  journal2.js
cottage_hearth/journal/migrations/: 0001_initial.py  0002_alter_article_creators.py  0003_auto_20210514_1403.py
cottage_hearth/journal/templates/journal/: base.html  journal.html  journal_article.html
cottage_hearth/static/: index.6908bb33.js  index.6908bb33.js.map  index.html  index.js  index.js.map
cottage_hearth/templates/: base.html
